--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "grunt": "~0.4.1",
     "grunt-bower-installer": "~0.3.6",
     "grunt-contrib-connect": "~0.9.0",
+    "grunt-contrib-copy": "~0.7.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-sass": "~0.8.1",
     "load-grunt-tasks": "~1.0.0",
